--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CXX_STANDARD_REQUIRED true)
 set(CXX_STANDARD 17)
 enable_testing()
 add_library(functionalities functionalitied.cpp)
+add_library(DataContainer DataInitialized.cpp)
 add_library(Vehicle Vehicle.cpp)
 
 
@@ -11,4 +12,4 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 add_executable(app Test.cpp)
 
-target_link_libraries(app ${GTEST_LIBRARIES} pthread functionalities Vehicle)
+target_link_libraries(app ${GTEST_LIBRARIES} pthread functionalities Vehicle DataContainer)
